@@ -23,18 +23,15 @@ Build-Depends-Arch:
 # used by upstream to build include/generated/timeconst.h
  bc <!stage1>,
 # used by upstream to build signing tools and to process certificates
-# - libssl-dev arch-qualification is a workaround for #827628 and #827633
- libssl-dev:native <!stage1>, libssl-dev [linux-any] <!stage1 !pkg.linux.notools cross>,
-# - openssl needs to run on the host; need :native for older versions that do
-#   not have M-A: allowed but need unqualified name for newer versions
- openssl (>= 1.1.0-1~) <!stage1> | openssl:native <!stage1>,
+ libssl-dev:native <!stage1>, libssl-dev <!stage1 !pkg.linux.notools cross>,
+ openssl (>= 1.1.0-1~) <!stage1>,
 # used by upstream to build perf documentation
- asciidoc-base <!stage1 !nodoc !pkg.linux.notools> | asciidoc <!stage1 !nodoc !pkg.linux.notools>,
+ asciidoc-base <!stage1 !nodoc !pkg.linux.notools>,
  xmlto <!stage1 !nodoc !pkg.linux.notools>,
 # used by upstream to build perf
  bison <!stage1 !pkg.linux.notools !nopython>,
 # - flex needs to run on the host; we have the same problem as for openssl
- flex (>= 2.6.1-1.1~) <!stage1 !pkg.linux.notools !nopython> | flex:native <!stage1 !pkg.linux.notools !nopython>,
+ flex (>= 2.6.1-1.1~) <!stage1 !pkg.linux.notools !nopython>,
  gcc-multilib [amd64 ppc64 s390x sparc64] <!stage1 !pkg.linux.notools !nopython>,
  libaudit-dev <!stage1 !pkg.linux.notools !nopython>,
  libbabeltrace-dev (>= 1.5.0) <!stage1 !pkg.linux.notools !nopython>,
