@@ -25,6 +25,7 @@ linux (4.13.4-1~exp1) UNRELEASED; urgency=medium
     - Install copyright file (and some other documentation) when the nodoc
       profile is used
   * debian/control: Move many build dependencies to Build-Depends-Arch field
+  * debian/control: Remove obsolete workarounds and alternate build deps
 
   [ Uwe Kleine-König ]
   * [arm64] really enable NET_DSA_MV88E6XXX for Espressobin
